--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
             android:orientation="horizontal">
 
             <EditText
-                android:id="@+id/editText"
+                android:id="@+id/tbPobarajProizvod"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
@@ -36,13 +36,34 @@
                 android:text="@string/pobaraj" />
 
             <ImageButton
-                android:id="@+id/imageButton10"
+                android:id="@+id/iconPobaraj"
                 android:layout_width="60dp"
                 android:layout_height="match_parent"
                 android:backgroundTint="@color/grey"
                 android:scaleType="fitCenter"
                 android:tint="#000000"
                 app:srcCompat="@drawable/lupa" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/lbPodrediSpored"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:background="@color/grey"
+                android:text="@string/podredi" />
+
+            <Spinner
+                android:id="@+id/spinPodredi"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@color/grey"
+                android:entries="@array/podreduvanje" />
         </LinearLayout>
 
         <ScrollView
@@ -464,13 +485,12 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:layout_marginBottom="60dp"
             android:background="#E4E4E4"
             android:orientation="horizontal">
 
             <ImageButton
-                android:id="@+id/imageButton18"
+                android:id="@+id/btnUndo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -479,7 +499,7 @@
                 app:srcCompat="@drawable/redo" />
 
             <ImageButton
-                android:id="@+id/imageButton16"
+                android:id="@+id/btnIzbrisi"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -488,7 +508,7 @@
                 app:srcCompat="@drawable/izbrisi" />
 
             <ImageButton
-                android:id="@+id/imageButton17"
+                android:id="@+id/btnVnesi"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -497,7 +517,7 @@
                 app:srcCompat="@drawable/vnes" />
 
             <ImageButton
-                android:id="@+id/imageButton15"
+                android:id="@+id/btnDodaj"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -506,7 +526,7 @@
                 app:srcCompat="@drawable/dodaj" />
 
             <ImageButton
-                android:id="@+id/imageButton14"
+                android:id="@+id/btnDosegaVneseno"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
